--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>4chan Image Scroller</title>
+  <title>Image Scroller</title>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
